--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "nodemon src/app.js"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "^4.18.2",
         "mysql2": "^3.5.2"
